# fashion-store

./: .gitignore  Makefile  README.md  product.csv  pyproject.toml  requirements.dev.txt  requirements.txt
backend/compose/: Dockerfile  entrypoint_worker
backend/src/apps/sellers/: factories.py  serializers.py  tasks.py  utils.py  views.py
backend/src/apps/sellers/migrations/: 0001_initial.py  0002_product_category.py  (+5 more)
backend/src/core/: celery.py  settings.py  urls.py
backend/src/fixtures/: category.json  seller.json  stock.json  user.json
compose/: .env.example  Dockerfile  docker-compose.yml
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.scss  index.tsx
frontend/src/app/constants/: app.constants.ts  env.constants.ts  http.constants.ts  rest-api.constants.ts  route.constants.ts
frontend/src/app/entities/: category.entity.ts  product.entity.ts  seller.entity.ts  user.entity.ts
frontend/src/app/helpers/: date.helper.ts
frontend/src/app/providers/: rest-api.provider.ts  toast.provider.ts
frontend/src/app/services/: category.service.ts  product.service.ts  seller.service.ts
frontend/src/config/: yup.config.ts
src/apps/sellers/: admin.py  models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
src/apps/sellers/migrations/: 0005_alter_stock_product.py  0007_alter_stock_product.py
src/apps/sellers/tests/: test_categories.py  test_products.py  test_sellers.py  test_stocks.py
src/core/: settings.py  tests_core.py  urls.py
src/fixtures/: category.json  product.json  seller.json  stock.json
(+50 files in other folders)
